# aes-128

./: .gitignore  README.md  sbox_generator.py
c/: CMakeLists.txt
c/include/: chanter.h
c/include/models/: aes_args.h  aes_config.h
c/include/utils/: string_utils.h
c/src/: chanter.c  main.c
c/src/models/: aes_args.c  aes_config.c
c/src/utils/: string_utils.c
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: index.ts  main.js  main.ts
node/src/lib/: aes-utils.ts  binary-utils.ts  bit-utils.ts  sbox-utils.ts  spoutin-utils.ts
node/src/models/: aes-settings.ts  setup.ts  system-settings.ts
node/src/stages/: 01_key-expansion.ts
python/: README.md  bitadd_testing.py  bitshift_testing.py  bitshift_testing_column.py  bitshift_testing_row.py  byte_sized_chunks.py  gmul_testing.py  main.py  sbox_generator.py
python/encryption/: encryption_aes.py  encryption_base.py  encryption_rsa.py
python/helpers/: bit_operation_helper.py  block_operation_helper.py  sbox_operation_helper.py
